--- a/index.html
+++ b/index.html
@@ -102,11 +102,11 @@ via <strong>IM</strong>, please find his <strong>XMPP</strong> address
 	<ul type="square">
 	<li><b>Journal:</b><br>
 <ul type="circle">
-<li>Guilin Wang, Jiangshan Yu, Qi Xie. <a href="doc/paper/TII-2013.pdf">'Security Analysis of A Single Sign-On Mechanism for Distributed Computer Networks'</a>. <i>IEEE Transactions on Industrial Informatics</i> (impact factor = 2.99), Vol.9, No.1, pp.294-302, Feb. 2013. DOI: 10.1109/TII.2012.221587 </li>
+<li>Guilin Wang, Jiangshan Yu, Qi Xie. <a href="doc/paper/TII-2013.pdf">'Security Analysis of A Single Sign-On Mechanism for Distributed Computer Networks'</a>. <i>IEEE Transactions on Industrial Informatics</i> (impact factor = 8.785), Vol.9, No.1, pp.294-302, Feb. 2013. DOI: 10.1109/TII.2012.221587 </li>
 <br>
 
 <li>
-Jiangshan Yu, Guilin Wang, Yi Mu, and Wei Gao. 'An Efficient and Improved Generic Framework for Three-Factor Authentication with Provably Secure Instantiation', <i>IEEE Transactions on Information Forensics and Security (TIFS)</i>, accepted, 2014. 
+Jiangshan Yu, Guilin Wang, Yi Mu, and Wei Gao. 'An Efficient and Improved Generic Framework for Three-Factor Authentication with Provably Secure Instantiation', <i>IEEE Transactions on Information Forensics and Security (TIFS)</i> (impact factor = 2.065), accepted, 2014. 
 </li>
 
 </ul>
