added cookies break

--- a/index.html
+++ b/index.html
@@ -237,6 +237,13 @@ scholarship for PhD studies (Oct./2012 - Sep./2015).</li>
 
 <p style="margin-top: 12px; margin-bottom: 6px"><b>Other Links: </b></p>
 	<ul type="disc">
+
+<li>
+<a href="https://mailman.cs.bham.ac.uk/mailman/listinfo/cookie-break-hosts">
+Subscribing </a> to
+the <a href="http://www.cs.bham.ac.uk/internal/research_students/cookiebreaks/">
+Cookies Break </a> Mailing list.</li>
+
 <li><a href="./cal.html"> The calendar of Security Privacy and Cryptography
 related events </a></li>
 
