--- a/index.html
+++ b/index.html
@@ -143,7 +143,7 @@ security in the University of Birmingham, UK.</font></i></p>
                 </div>	
             </div>
         </div>
-        
+ <center>                           
         <div class="templatemo-service">
             <div class="container">
                 <div class="row">
@@ -152,7 +152,7 @@ security in the University of Birmingham, UK.</font></i></p>
                             <div>
                                 <img style="width: 65px; height:
                                 65px;"src="images/shu.png" alt="icon" />
-                                <span class="templatemo-service-item-header">Academic & Hacking</span>
+                                <span class="templatemo-service-item-header">Academic</span>
                             </div>
                             <div style="height:4cm; overflow:auto"> <!--overflow:hiden is also nice -->
                             <p><font size="4">Mainly about my academic research, and a bit
@@ -166,7 +166,7 @@ security in the University of Birmingham, UK.</font></i></p>
                         </div>
                         <div class="clearfix"></div>
                     </div>
-                    
+
                    <div class="col-md-4">
                         <div class="templatemo-service-item" >
                             <div>
@@ -198,9 +198,13 @@ security in the University of Birmingham, UK.</font></i></p>
                                 65px;"src="images/biz.png" alt="icon"/>
                                 <span class="templatemo-service-item-header">Business</span>
                             </div>
+                            <center>
                             <div style="height:4cm; overflow:auto">
-                            <p><font size="4">Let's do some business :)</font></p>
+                            <p><font size="4">You are more than welcome for
+                            discussing any idea about possible future
+                            cooperations :) </font></p>
                             </div>
+                            </center>
                             <div class="text-center">
                                 <a href="web/biz_en.html" 
                                 	class="templatemo-btn-read-more btn btn-orange">READ MORE</a>
@@ -212,7 +216,7 @@ security in the University of Birmingham, UK.</font></i></p>
                 </div>
             </div>
         </div>
-
+</center>
 
         <div id="templatemo-portfolio" >
             <div class="container">
