--- a/index.html
+++ b/index.html
@@ -83,8 +83,8 @@ Oct.2014
                         <div class="container">
                             <div class="carousel-caption">
                                 <h1>WELCOME !</h1>
-                                <p>CHOOSE YOUR LANGUARE （选择语言）</p>
-                                <p><a class="btn btn-lg btn-green" href="index.html" role="button" style="margin: 20px;">English</a> 
+                                <p>YOU CAN CHANGE YOUR LANGUARE TO （换到中文页面）</p>
+<!--                                <p><a class="btn btn-lg btn-green" href="index.html" role="button" style="margin: 20px;">English</a> -->
                                 	<a class="btn btn-lg btn-orange" href="web/index_cn.html" role="button">中文</a></p>
                             </div>
                         </div>
@@ -545,7 +545,7 @@ security in the University of Birmingham, UK.</font></i></p>
                         src="images/xmpp.png" alt="icon
                         2"><a href="images/email4.png"><img style="width: 130px;
                         height: 30px" src=images/email4.png></a>(XMPP for IM,
-                        OTR supported)
+                        OTR)
                         <br>
                         <span style="padding-left:165px"><a href="doc/otr.txt">
                         Fingerprint</a></span>
