--- a/index.html
+++ b/index.html
@@ -83,8 +83,11 @@ Oct.2014
                         <div class="container">
                             <div class="carousel-caption">
                                 <h1>WELCOME !</h1>
-                                <p>YOU CAN CHANGE YOUR LANGUARE TO （换到中文页面）</p>
-<!--                                <p><a class="btn btn-lg btn-green" href="index.html" role="button" style="margin: 20px;">English</a> -->
+                                <p>ENGLISH BY DEFAULT. PREFER CHINESE? <br>(☆_☆)<br>至当存高远，中文也可选
+                                </p>
+                                <p><a class="btn btn-lg btn-green"
+                                href="#" role="button" style="margin:
+                                20px;">English</a>
                                 	<a class="btn btn-lg btn-orange" href="web/index_cn.html" role="button">中文</a></p>
                             </div>
                         </div>
@@ -112,7 +115,7 @@ Oct.2014
                             <div class="container">
                                 <div class="carousel-caption">
                                 	<h1>Business</h1>
-                                    <p>I love martial arts!</p>
+                                    <p>Let's disrupting the world.</p>
                                     <p><a class="btn btn-lg btn-orange" href="web/biz_en.html" role="button">Read More</a></p>
                                 </div>
                             </div>
