--- a/index.html
+++ b/index.html
@@ -60,6 +60,7 @@ Oct.2014
                                 <li><a href="#templatemo-portfolio">PHOTO</a></li>
                                 <li><a href="#templatemo-blog">BLOG</a></li>
                                 <li><a href="#templatemo-contact">CONTACT</a></li>
+                                <li><a href="#templatemo-follow">FOLLOW ME</a></li>
                                 <li><a rel="nofollow" href="doc/J.YU.pdf" class="external-link">CV</a></li>
                             </ul>
                         </div><!--/.nav-collapse -->
@@ -67,7 +68,7 @@ Oct.2014
                 </div><!--/.navbar -->
             </div> <!-- /container -->
         </div>
-        
+
         <div>
             <!-- Carousel -->
             <div id="templatemo-carousel" class="carousel slide" data-ride="carousel">
@@ -591,11 +592,10 @@ security in the University of Birmingham, UK.</font></i></p>
             </div><!-- /.container -->
         </div>
 
-        <div class="templatemo-footer" >
+        <div class="templatemo-footer" id="templatemo-follow">
             <div class="container">
                 <div class="row">
                     <div class="text-center">
-
                         <div class="footer_container">
                             <ul class="list-inline">
                                 <li>
@@ -631,7 +631,7 @@ security in the University of Birmingham, UK.</font></i></p>
                             <a class="btn btn-lg btn-orange" href="#" role="button" id="btn-back-to-top">Back To Top</a>
                             <div class="height30"></div>
                         </div>
-                        <div class="footer_bottom_content">Copyright © 2084 <a href="#">Jiangshan Yu</a></div>
+                        <div class="footer_bottom_content">Copyright © 2014 <a href="#">Jiangshan Yu</a></div>
                         
                     </div>
                 </div>
