--- a/index.html
+++ b/index.html
@@ -83,8 +83,8 @@ Oct.2014
                     <div class="item active">
                         <div class="container">
                             <div class="carousel-caption">
-                                <h1>WELCOME !</h1>
-                                <p>ENGLISH BY DEFAULT. PREFER CHINESE? <br>(☆_☆)<br>至当存高远，中文也可选
+                                <h1><bold>WELCOME !</bold></h1>
+                                <p><b>ENGLISH BY DEFAULT. PREFER CHINESE? </b>
                                 </p>
                                 <p><a class="btn btn-lg btn-green"
                                 href="#" role="button" style="margin:
@@ -99,14 +99,14 @@ Oct.2014
                                 <div class="carousel-caption">
                                     <div class="col-sm-6 col-md-6">
                                     	<h1>Academic</h1>
-                                        <p>All on security</p>
+                                        <p><b>All on security</b></p>
                                       <p><a class="btn btn-lg btn-orange"
                                       href="web/academic_en.html"
                                       role="button">Read More</a></p>
                                     </div>
                                     <div class="col-sm-6 col-md-6">
                                     	<h1>Hacking</h1>
-                                        <p>It's fun!</p>
+                                        <p><b>It's fun!</b></p>
                                       <p><a class="btn btn-lg btn-orange" href="web/hacking_en.html" role="button">Read More</a></p>
                                     </div>
                                 </div>
@@ -116,7 +116,7 @@ Oct.2014
                             <div class="container">
                                 <div class="carousel-caption">
                                 	<h1>Business</h1>
-                                    <p>Let's disrupting the world.</p>
+                                    <p><b>Let's disrupting the world.</b></p>
                                     <p><a class="btn btn-lg btn-orange" href="web/biz_en.html" role="button">Read More</a></p>
                                 </div>
                             </div>
@@ -126,7 +126,7 @@ Oct.2014
                             <div class="container">
                                 <div class="carousel-caption">
                                 	<h1>Martial Arts</h1>
-                                    <p>I love martial arts!</p>
+                                    <p><b>I love martial arts!</b></p>
                                     <p><a class="btn btn-lg btn-orange" href="web/wu_en.html" role="button">Read More</a></p>
                                 </div>
                             </div>
