--- a/index.html
+++ b/index.html
@@ -55,13 +55,13 @@ Oct.2014
                         </div>
                         <div class="navbar-collapse collapse" id="templatemo-nav-bar">
                             <ul class="nav navbar-nav navbar-right" style="margin-top: 40px;">
-                                <li class="active"><a href="#templatemo-top"><b>HOME</b></a></li>
-                                <li><a href="#templatemo-about"><b>ABOUT</b></a></li>
-                                <li><a href="#templatemo-portfolio"><b>PHOTO</b></a></li>
-                                <li><a href="#templatemo-blog"><b>BLOG</b></a></li>
-                                <li><a href="#templatemo-contact"><b>CONTACT</b></a></li>
-                                <li><a href="#templatemo-follow"><b>FOLLOW ME</b></a></li>
-                                <li><a rel="nofollow" href="doc/J.YU.pdf" class="external-link"><b>CV</b></a></li>
+                                <li class="active"><a href="#templatemo-top">HOME</a></li>
+                                <li><a href="#templatemo-about">ABOUT</a></li>
+                                <li><a href="#templatemo-portfolio">PHOTO</a></li>
+                                <li><a href="#templatemo-blog">BLOG</a></li>
+                                <li><a href="#templatemo-contact">CONTACT</a></li>
+                                <li><a href="#templatemo-follow">FOLLOW ME</a></li>
+                                <li><a rel="nofollow" href="doc/J.YU.pdf" class="external-link">CV</a></li>
                             </ul>
                         </div><!--/.nav-collapse -->
                     </div><!--/.container-fluid -->
