--- a/index.html
+++ b/index.html
@@ -116,7 +116,7 @@ Oct.2014
                             <div class="container">
                                 <div class="carousel-caption">
                                 	<h1>Business</h1>
-                                    <p><b>Let's disrupting the world.</b></p>
+                                    <p><b>Let's disrupt the world.</b></p>
                                     <p><a class="btn btn-lg btn-orange" href="web/biz_en.html" role="button">Read More</a></p>
                                 </div>
                             </div>
@@ -142,8 +142,8 @@ Oct.2014
                 <div class="templatemo-slogan text-center">
                     <span class="txt_darkgrey">Welcome to </span><span class="txt_orange">My Space</span>
                     <p class="txt_slogan"><i><font size="4">Hi, I'm Jiangshan
-Yu, a big fan of martial arts, and a PhD researcher working on information
-security in the University of Birmingham, UK.</font></i></p>
+Yu, a PhD researcher working on information security in the University of
+Birmingham, UK. <br>(I'm also a big fan of martial arts.) </font></i></p>
                 </div>	
             </div>
         </div>
@@ -204,9 +204,9 @@ security in the University of Birmingham, UK.</font></i></p>
                             </div>
                             <center>
                             <div style="height:4cm; overflow:auto">
-                            <p><font size="4">You are more than welcome for
-                            discussing any idea about possible future
-                            cooperations :) </font></p>
+                            <p><font size="4">You are more than welcome to
+                            discuss any idea on possible future cooperations
+                            </font></p>
                             </div>
                             </center>
                             <div class="text-center">
