--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@ Oct.2014
                                 <li><a href="#templatemo-blog">BLOG</a></li>
                                 <li><a href="#templatemo-contact">CONTACT</a></li>
                                 <li><a href="#templatemo-follow">FOLLOW ME</a></li>
-                                <li><a rel="nofollow" href="doc/J.YU.pdf" class="external-link">CV</a></li>
+                                <li><a rel="nofollow" href="web/resume.html" class="external-link">RESUME</a></li>
                             </ul>
                         </div><!--/.nav-collapse -->
                     </div><!--/.container-fluid -->
@@ -140,7 +140,7 @@ Oct.2014
         <div class="templatemo-welcome" id="templatemo-about">
             <div class="container">
                 <div class="templatemo-slogan text-center">
-                    <span class="txt_darkgrey">Welcome to </span><span class="txt_orange">My Space</span>
+                    <span class="txt_darkgrey">I'm </span><span class="txt_orange">Jiangshan Yu</span>
                     <p class="txt_slogan"><i><font size="4">Hi, I'm Jiangshan
 Yu, a PhD researcher working on information security in the University of
 Birmingham, UK. <br>(I'm also a big fan of martial arts.) </font></i></p>
