--- a/web/resume.html
+++ b/web/resume.html
@@ -15,7 +15,10 @@
 	<link rel="stylesheet" type="text/css" href="resume.css" media="all" />
 </head>
 <body>
-
+<div id="xyz" style="position: fixed;
+    left: 90%;top:5%">
+   <a href="../index.html"> <h3><b>Home</b></h3></a>
+</div>
 <div id="doc2" class="yui-t7">
 	<div id="inner">
 		<div id="hd">
