--- a/index.html
+++ b/index.html
@@ -237,7 +237,7 @@ Birmingham, UK. <br>(I'm also a big fan of martial arts.) </font></i></p>
                     <div class="templatemo-gallery-category" style="font-size:16px; margin-top:8px;">
                         <div class="text-center">
                             <a class="active" href=".gallery">All</a>
-                            / <a href=".China">China </a>/ <a href=".AU">Australia</a>
+                            / <a href=".ME">Me</a>/ <a href=".AU">Friends</a>
                             / <a href=".UK">UK</a>
                             / <a href=".MA">Martial arts</a>
                         </div>
@@ -247,6 +247,21 @@ Birmingham, UK. <br>(I'm also a big fan of martial arts.) </font></i></p>
                 <div class="clearfix"></div>
                 <div class="text-center">
                     <ul class="templatemo-project-gallery" >
+
+                      <li class="col-lg-2 col-md-2 col-sm-2  ME" >
+                            <a class="colorbox" href="images/my/deer_a.JPG" data-group="ME">
+                                <div class="templatemo-project-box">
+                                    <img src="images/my/deer_b.JPG" class="img-responsive" alt="ME" />
+                                    <div class="project-overlay">
+                                        <h5>Me</h5>
+                                        <hr />
+                                        <h4>Harbin</h4>
+                                    </div>
+                                </div>
+                            </a>
+                        </li>
+
+
                       <li class="col-lg-2 col-md-2 col-sm-2  MA" >
                             <a class="colorbox" href="images/wu/wu_1a.jpg" data-group="MA">
                                 <div class="templatemo-project-box">
@@ -433,30 +448,30 @@ Birmingham, UK. <br>(I'm also a big fan of martial arts.) </font></i></p>
 
                         <p><img style="width: 27px; height: 27px;"
                         src="images/email.png" alt="icon
-                        2"><a href="images/email1.png"><img style="width: 130px;
-                        height: 30px" src=images/email1.png></a>(University
+                        2"><a href="images/email/email1.png"><img style="width: 130px;
+                        height: 30px" src=images/email/email1.png></a>(University
                         account) 
                         <br>
                         <span style="padding-left:165px"><a href="doc/jxy223.asc">
                         PGP Key</a> and <a href="doc/jxy223.txt">
                         SMIME </a></span> 
                         <br>
-                        <span style="padding-left:30px"> <a href="images/email2.png"><img style="width:
+                        <span style="padding-left:30px"> <a href="images/email/email2.png"><img style="width:
                         130px; height: 30px"
-                        src=images/email2.png></a>(Persional account)</span>
+                        src=images/email/email2.png></a>(Persional account)</span>
                         <br>
                         <span style="padding-left:165px"><a href="doc/email2.asc">
                         PGP Key</a></span>
                         <br>
-                        <span style="padding-left:30px"> <a href="images/email3.png"><img style="width:
+                        <span style="padding-left:30px"> <a href="images/email/email3.png"><img style="width:
                         130px; height: 30px"
-                        src=images/email3.png></a>(P2P mail)</span>                      
+                        src=images/email/email3.png></a>(P2P mail)</span>                      
                         </p>
 
                         <p><img style="width: 27px; height: 27px;"
                         src="images/xmpp.png" alt="icon
-                        2"><a href="images/email4.png"><img style="width: 130px;
-                        height: 30px" src=images/email4.png></a>(XMPP for IM,
+                        2"><a href="images/email/email4.png"><img style="width: 130px;
+                        height: 30px" src=images/email/email4.png></a>(XMPP for IM,
                         OTR)
                         <br>
                         <span style="padding-left:165px"><a href="doc/otr.txt">
