--- a/index.html
+++ b/index.html
@@ -263,9 +263,9 @@ Birmingham, UK. <br>(I'm also a big fan of martial arts.) </font></i></p>
 
 
                       <li class="col-lg-2 col-md-2 col-sm-2  MA" >
-                            <a class="colorbox" href="images/wu/wu_1a.jpg" data-group="MA">
+                            <a class="colorbox" href="images/wu/wu1a.JPG" data-group="MA">
                                 <div class="templatemo-project-box">
-                                    <img src="images/wu/wu_1b.jpg" class="img-responsive" alt="MA" />
+                                    <img src="images/wu/wu_1b.JPG" class="img-responsive" alt="MA" />
                                     <div class="project-overlay">
                                         <h5>Martial arts</h5>
                                         <hr />
@@ -288,9 +288,9 @@ Birmingham, UK. <br>(I'm also a big fan of martial arts.) </font></i></p>
                         </li>
 
                         <li class="col-lg-2 col-md-2 col-sm-2  MA" >
-                            <a class="colorbox" href="images/wu/wu_2a.jpg" data-group="MA">
+                            <a class="colorbox" href="images/wu/wu_2a.JPG" data-group="MA">
                                 <div class="templatemo-project-box">
-                                    <img src="images/wu/wu_2b.jpg" class="img-responsive" alt="MA" />
+                                    <img src="images/wu/wu_2b.JPG" class="img-responsive" alt="MA" />
                                     <div class="project-overlay">
                                         <h5>Martial arts</h5>
                                         <hr />
