--- a/index.html
+++ b/index.html
@@ -303,11 +303,12 @@ Birmingham, UK. <br>(I'm also a big fan of martial arts.) </font></i></p>
 
                     </ul><!-- /.gallery -->
                 </div>
+<!--
                 <div class="clearfix"></div>
                 <div class="row text-center">
                     <a class="btn_loadmore btn btn-lg btn-orange" href="#" role="button">LOAD MORE</a>
                 </div>
-            </div><!-- /.container -->
+-->            </div><!-- /.container -->
         </div> <!-- /.templatemo-portfolio -->
 
 
