--- a/index.html
+++ b/index.html
@@ -57,8 +57,10 @@ Oct.2014
                             <ul class="nav navbar-nav navbar-right" style="margin-top: 40px;">
                                 <li class="active"><a href="#templatemo-top">HOME</a></li>
                                 <li><a href="#templatemo-about">ABOUT</a></li>
+                                <li><a rel="nofollow" class="external-link" href="web/academic_en.html">Research</a></li>
                                 <li><a href="#templatemo-portfolio">PHOTO</a></li>
-                                <li><a href="#templatemo-blog">BLOG</a></li>
+<!--                                <li><a href="#templatemo-blog">BLOG</a></li>
+-->
                                 <li><a href="#templatemo-contact">CONTACT</a></li>
                                 <li><a href="#templatemo-follow">FOLLOW ME</a></li>
                                 <li><a rel="nofollow" href="web/resume.html" class="external-link">RESUME</a></li>
@@ -142,8 +144,9 @@ Oct.2014
                 <div class="templatemo-slogan text-center">
                     <span class="txt_darkgrey">I'm </span><span class="txt_orange">Jiangshan Yu</span>
                     <p class="txt_slogan"><i><font size="4">Hi, I'm Jiangshan
-Yu, a PhD researcher working on information security in the University of
-Birmingham, UK. <br>(I'm also a big fan of martial arts.) </font></i></p>
+                          Yu, a PhD researcher working on information security
+                          in the University of Birmingham, UK. <br>(I'm also a
+                          big fan of martial arts.) </font></i></p>
                 </div>	
             </div>
         </div>
@@ -156,7 +159,7 @@ Birmingham, UK. <br>(I'm also a big fan of martial arts.) </font></i></p>
                             <div>
                                 <img style="width: 65px; height:
                                 65px;"src="images/shu.png" alt="icon" />
-                                <span class="templatemo-service-item-header">Academic</span>
+                                <span class="templatemo-service-item-header">Research</span>
                             </div>
                             <div style="height:4cm; overflow:auto"> <!--overflow:hiden is also nice -->
                             <p><font size="4">Mainly about my academic research, and a bit
@@ -313,7 +316,7 @@ Birmingham, UK. <br>(I'm also a big fan of martial arts.) </font></i></p>
 
 
 
-        <div id="templatemo-blog">
+<!--        <div id="templatemo-blog">
             <div class="container">
                 <div class="row">
                     <div class="templatemo-line-header" style="margin-top: 0px;" >
@@ -329,7 +332,7 @@ Birmingham, UK. <br>(I'm also a big fan of martial arts.) </font></i></p>
                         <font size=10>Coming Soon</font>
 </center>
                 
- <!--               <div class="blog_box">
+               <div class="blog_box">
                     <div class="col-sm-5 col-md-6 blog_post">
                         <ul class="list-inline">
                             <li class="col-md-4">
@@ -353,7 +356,8 @@ Birmingham, UK. <br>(I'm also a big fan of martial arts.) </font></i></p>
                         </ul>
                     </div> <!-- /.blog_post 1 -->
                     
-<!--                    <div class="col-sm-5 col-md-6 blog_post">
+
+<!--                     <div class="col-sm-5 col-md-6 blog_post">
                         <ul class="list-inline">
                             <li class="col-md-4"><a href="#">
                                 <img class="img-responsive" src="images/blog-image-2.jpg" alt="gallery 2" /></a>
