--- a/index.html
+++ b/index.html
@@ -58,8 +58,9 @@ Oct.2014
                                 <li class="active"><a href="#templatemo-top">HOME</a></li>
                                 <li><a href="#templatemo-about">ABOUT</a></li>
                                 <li><a href="#templatemo-research">Research</a></li>
-                                <li><a rel="nofollow" href="web/wu_en.html" class="external-link">MARTIAL ARTS</a></li>
-                                <li><a rel="nofollow" href="web/biz_en.html" class="external-link">BIZ</a></li>
+                                <li><a href="#templatemo-wu">MARTIAL
+                                ARTS</a></li>
+                                <li><a href="#templatemo-biz">BIZ</a></li>
                                 <li><a href="#templatemo-portfolio">PHOTO</a></li>
 <!--                                <li><a href="#templatemo-blog">BLOG</a></li>
 -->
@@ -246,8 +247,8 @@ Oct.2014
                         <div class="templatemo-service-item">
                             <div>
                                 <img style="width: 65px; height:
-                                65px;"src="images/shu.png" alt="icon" />
-                                <span class="templatemo-service-item-header">Research</span>
+                                65px;margin-left:20px"src="images/shu.png" alt="icon" />
+                                <span class="templatemo-service-item-header" style="margin-left:2px">Research</span>
                             </div>
                             <br class="clearfix"/>
                         </div>
@@ -474,6 +475,83 @@ Oct.2014
         </div>
 </div>
 </div>       
+
+
+        <div id="templatemo-wu" >
+            <div class="container">
+                <div class="row">
+                    <div class="templatemo-line-header" style="margin-top: 0px;" >
+                        <div class="text-center">
+                            <hr class="team_hr team_hr_left
+                            hr_gray"/><span class="txt_darkgrey">MARTIAL ARTS</span>
+                            <hr class="team_hr team_hr_right hr_gray" />
+                        </div>
+                        <br>                        
+                        <div class="templatemo-service">
+                          <div class="container">
+                            <div class="row">
+                              <div class="col-md-2">
+                                <div class="templatemo-service-item">
+                                  <div>
+                                    <img style="width: 65px; height:
+                                                65px;margin-left:20px"src="images/wu.png" alt="icon" />
+                                    <span class="templatemo-service-item-header">Martial Arts</span>
+                            </div>
+                            <br class="clearfix"/>
+                        </div>
+                        <div class="clearfix"></div>
+                    </div>
+                        <p style="margin-left: 200px; margin-bottom:
+                        6px"> <font size="4">Coming soon.</font>
+                          </p>
+                </div>
+            </div>
+        </div>
+                    <br class="clearfix"/>
+                </div>
+                <br class="clearfix"/>
+            </div>
+        </div>
+</div>
+
+        <div id="templatemo-biz" >
+            <div class="container">
+                <div class="row">
+                    <div class="templatemo-line-header" style="margin-top: 0px;" >
+                        <div class="text-center">
+                            <hr class="team_hr team_hr_left
+                            hr_gray"/><span class="txt_darkgrey">BUSINESS</span>
+                            <hr class="team_hr team_hr_right hr_gray" />
+                        </div>
+                        <br>                        
+                        <div class="templatemo-service">
+                          <div class="container">
+                            <div class="row">
+                              <div class="col-md-2">
+                                <div class="templatemo-service-item">
+                                  <div>
+                                    <img style="width: 65px; height:
+                                                65px;margin-left:20px"src="images/biz.png" alt="icon" />
+                                    <span class="templatemo-service-item-header" style="margin-left:2px">BUSINESS</span>
+                            </div>
+                            <br class="clearfix"/>
+                        </div>
+                        <div class="clearfix"></div>
+                    </div>
+                        <p style="margin-left: 200px; margin-bottom:
+                        6px"> <font size="4">Coming soon.</font>
+                          </p>
+                </div>
+            </div>
+        </div>
+                    <br class="clearfix"/>
+                </div>
+                <br class="clearfix"/>
+            </div>
+        </div>
+</div>
+
+
 
         <div id="templatemo-portfolio" >
             <div class="container">
