--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@ Oct.2014
                             <ul class="nav navbar-nav navbar-right" style="margin-top: 40px;">
                                 <li class="active"><a href="#templatemo-top">HOME</a></li>
                                 <li><a href="#templatemo-about">ABOUT</a></li>
-                                <li><a href="#templatemo-research">RESEARCH</a></li>
+                                <li><a href="#templatemo-research">Research</a></li>
                                 <li><a href="#templatemo-wu">MARTIAL
                                 ARTS</a></li>
                                 <li><a href="#templatemo-biz">BIZ</a></li>
@@ -595,7 +595,7 @@ Oct.2014
 
 
                       <li class="col-lg-2 col-md-2 col-sm-2  MA" >
-                            <a class="colorbox" href="images/wu/wu1a.JPG" data-group="MA">
+                            <a class="colorbox" href="images/wu/wu_1a.JPG" data-group="MA">
                                 <div class="templatemo-project-box">
                                     <img src="images/wu/wu_1b.JPG" class="img-responsive" alt="MA" />
                                     <div class="project-overlay">
