--- a/index.html
+++ b/index.html
@@ -57,10 +57,10 @@ Oct.2014
                             <ul class="nav navbar-nav navbar-right" style="margin-top: 40px;">
                                 <li class="active"><a href="#templatemo-top">HOME</a></li>
                                 <li><a href="#templatemo-about">ABOUT</a></li>
-                                <li><a href="#templatemo-research">Research</a></li>
+                                <li><a href="#templatemo-research">RESEARCH</a></li>
                                 <li><a href="#templatemo-wu">MARTIAL
                                 ARTS</a></li>
-                                <li><a href="#templatemo-biz">BIZ</a></li>
+                                <li><a href="#templatemo-biz">BUSINESS</a></li>
                                 <li><a href="#templatemo-portfolio">PHOTO</a></li>
 <!--                                <li><a href="#templatemo-blog">BLOG</a></li>
 -->
