--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@ Oct.2014
                                 <li><a href="#templatemo-contact">CONTACT</a></li>
 <!--                                <li><a href="#templatemo-follow">FOLLOW</a></li>
 -->
-                                <li><a rel="nofollow" href="web/resume.html" class="external-link">RESUME</a></li>
+                                <li><a rel="nofollow" href="web/resume.html" class="external-link">CV</a></li>
                             </ul>
                         </div><!--/.nav-collapse -->
                     </div><!--/.container-fluid -->
