--- a/index.html
+++ b/index.html
@@ -767,7 +767,7 @@ Oct.2014
                         </div>
                     </div>
 
-                    <div class="col-md-8">s
+                    <div class="col-md-8">
                         <div class="templatemo-contact-map" id="map-canvas"> </div>  
                         <div class="clearfix"></div>
                     </div>
@@ -823,12 +823,8 @@ Oct.2014
                                 src="images/location.png" alt="icon 4" /> Room
                                 125, School of Computer Science, University
                                 &nbsp &nbsp &nbsp &nbsp &nbsp  of Birmingham, UK.</p>                        	
-                        <br>
-                        <br>
-                        <br>
                     </div>
                     
-                     <div class="templatemo-footer" id="templatemo-follow">
                       <div class="container">
                         <div class="row">
                           <div class="text-center">
@@ -868,8 +864,6 @@ Oct.2014
                             <div class="height30"></div>
                             </div>
 -->                           <div class="footer_bottom_content">Copyright © 2014 <a href="#">Jiangshan Yu</a></div>
-                            
-                          </div>
                         </div>
                       </div>
                     </div>
