--- a/index.html
+++ b/index.html
@@ -113,7 +113,7 @@ Oct.2014
                                     <div class="col-sm-6 col-md-6">
                                     	<h1>Hacking</h1>
                                         <p><b>It's fun!</b></p>
-                                      <p><a class="btn btn-lg btn-orange" href="web/hacking_en.html" role="button">Read More</a></p>
+                                      <p><a class="btn btn-lg btn-orange" href="http://afnom.github.io/" role="button">Read More</a></p>
                                     </div>
                                 </div>
                         </div>
@@ -123,7 +123,7 @@ Oct.2014
                                 <div class="carousel-caption">
                                 	<h1>Business</h1>
                                     <p><b>Let's disrupt the world.</b></p>
-                                    <p><a class="btn btn-lg btn-orange" href="web/biz_en.html" role="button">Read More</a></p>
+                                    <p><a class="btn btn-lg btn-orange" href="#templatemo-biz" role="button">Read More</a></p>
                                 </div>
                             </div>
                         </div>
@@ -133,7 +133,7 @@ Oct.2014
                                 <div class="carousel-caption">
                                 	<h1>Martial Arts</h1>
                                     <p><b>I love martial arts!</b></p>
-                                    <p><a class="btn btn-lg btn-orange" href="web/wu_en.html" role="button">Read More</a></p>
+                                    <p><a class="btn btn-lg btn-orange" href="#templatemo-wu" role="button">Read More</a></p>
                                 </div>
                             </div>
                         </div>                        
@@ -170,7 +170,7 @@ Oct.2014
                             about hacking.</font></p>
                             </div>
                             <div class="text-center">
-                            	<a href="web/academic_en.html" 
+                            	<a href="#templatemo-research" 
                                 	class="templatemo-btn-read-more btn btn-orange">READ MORE</a>
                             </div>
                             <br class="clearfix"/>
@@ -193,7 +193,7 @@ Oct.2014
                             </div>
            
                             <div class="text-center">
-                                <a href="web/wu_en.html"
+                                <a href="#templatemo-wu"
                                 	class="templatemo-btn-read-more btn
                                 	btn-orange">READ MORE</a>
                             </div>
@@ -217,7 +217,7 @@ Oct.2014
                             </div>
                             </center>
                             <div class="text-center">
-                                <a href="web/biz_en.html" 
+                                <a href="#templatemo-biz" 
                                 	class="templatemo-btn-read-more btn btn-orange">READ MORE</a>
                             </div>
                             <br class="clearfix"/>
@@ -441,6 +441,8 @@ Oct.2014
 
 	                  <ul type="circle"; style="margin-left: 200px; margin-bottom:
                               6px">
+
+                      <li> <a href="http://afnom.github.io/"> The University of Birmingham Hacking Club</a></li>
                       <li>
                         <a href="https://mailman.cs.bham.ac.uk/mailman/listinfo/cookie-break-hosts">
                           Subscribing </a> to
