--- a/index.html
+++ b/index.html
@@ -33,6 +33,7 @@ Oct.2014
     <body>
 
         <div class="templatemo-top-bar" id="templatemo-top">
+
         </div>
 
         <div class="templatemo-top-menu"> 
@@ -79,28 +80,30 @@ Oct.2014
             <!-- Carousel -->
             <div id="templatemo-carousel" class="carousel slide" data-ride="carousel">
                 <!-- Indicators -->
-                <ol class="carousel-indicators">
+<!--                <ol class="carousel-indicators">
                     <li data-target="#templatemo-carousel" data-slide-to="0" class="active"></li>
                     <li data-target="#templatemo-carousel" data-slide-to="1"></li>
                     <li data-target="#templatemo-carousel" data-slide-to="2"></li>
                     <li data-target="#templatemo-carousel" data-slide-to="3"></li>
                 </ol>
-                <div class="carousel-inner">
+-->
+<!--                <div class="carousel-inner">
                     <div class="item active">
                         <div class="container">
                             <div class="carousel-caption">
-                                <h1><bold>WELCOME !</bold></h1>
-                                <p><b>ENGLISH BY DEFAULT. PREFER CHINESE? </b>
+                                <h1 align="justify"><bold></bold></h1><br><br>
+<!--                                <p><b>ENGLISH BY DEFAULT. PREFER CHINESE? </b>
                                 </p>
                                 <p><a class="btn btn-lg btn-green"
                                 href="#" role="button" style="margin:
                                 20px;">English</a>
                                 	<a class="btn btn-lg btn-orange" href="web/index_cn.html" role="button">中文</a></p>
-                            </div>
+-->                         
+<!--                            </div>
                         </div>
                     </div>
                     
-                    <div class="item">
+<!--                    <div class="item">
                         <div class="container">
                                 <div class="carousel-caption">
                                     <div class="col-sm-6 col-md-6">
@@ -136,21 +139,24 @@ Oct.2014
                                     <p><a class="btn btn-lg btn-orange" href="#templatemo-wu" role="button">Read More</a></p>
                                 </div>
                             </div>
-                        </div>                        
+-->
+<!--                        </div>                        
                 </div>
-                <a class="left carousel-control" href="#templatemo-carousel" data-slide="prev"><span class="glyphicon glyphicon-chevron-left"></span></a>
+-->
+<!--                <a class="left carousel-control" href="#templatemo-carousel" data-slide="prev"><span class="glyphicon glyphicon-chevron-left"></span></a>
                 <a class="right carousel-control" href="#templatemo-carousel" data-slide="next"><span class="glyphicon glyphicon-chevron-right"></span></a>
-            </div><!-- /#templatemo-carousel -->
+-->            </div><!-- /#templatemo-carousel -->
+
         </div>
+
 
         <div class="templatemo-welcome" id="templatemo-about">
             <div class="container">
                 <div class="templatemo-slogan text-center">
-                    <span class="txt_darkgrey">I'm </span><span class="txt_orange">Jiangshan Yu</span>
-                    <p class="txt_slogan"><i><font size="4">Hi, I'm Jiangshan
-                          Yu, a PhD researcher working on information security
-                          in the University of Birmingham, UK. <br>(I'm also a
-                          big fan of martial arts.) </font></i></p>
+                    <span class="txt_darkgrey"> </span><span class="txt_orange">Jiangshan Yu</span>
+                    <p class="txt_slogan"><br><i><font size="5">PhD researcher
+                          working on information security in the University of
+                          Birmingham, UK. <br> </font></i></p>
                 </div>	
             </div>
         </div>
